first css tests

--- a/HoPe/Foerder/templates/Foerder/index.html
+++ b/HoPe/Foerder/templates/Foerder/index.html
@@ -1,4 +1,11 @@
 {% extends "base.html" %}
-{% block content %}  
- <a>This is the body</a>
+{% block content %}
+  <div class="splash-container">
+    <div class="splash">
+        <h1 class="splash-head">HoPeGerman</h1>
+        <p class="splash-subhead">House of Perspectives</p>
+        <a>test</a>
+    </div>
+  </div>
+
 {% endblock %}
