--- a/HoPe/static/css/custom.css
+++ b/HoPe/static/css/custom.css
@@ -1,3 +1,75 @@
-body {
-	color: red;
+body, html {
+	width: 100%;
+	height: 100%;
+
+}
+
+.bg {
+	background-image: linear-gradient(to bottom right, white 50%, green);
+}
+
+.home-menu {
+    background: white;
+}
+
+.splash-container {
+	background: white;
+}
+
+.home-menu .pure-menu-heading {
+    font-weight: 400;
+    font-size: 120%;
+}
+
+.lang {
+	float: right;
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+	float: right;
+}
+
+.dropdown-lang {
+  position: relative;
+  display: inline-block;
+	float: right;
+}
+
+.dropdown-content-lang {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+	right: 0px;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  padding: 12px 16px;
+  z-index: 1;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+.dropdown-lang:hover .dropdown-content-lang {
+  display: block;
+}
+
+.list-lang {
+	list-style-type:none;
+}
+
+@media (min-width: 48em) {
+	body {
+        font-size: 20px;
+  }
 }
