--- a/HoPe/static/css/custom.css
+++ b/HoPe/static/css/custom.css
@@ -8,6 +8,15 @@ body, html {
 	background-image: linear-gradient(to bottom right, white 50%, green);
 }
 
+.bg-picture {
+	background-image: url('https://travelafricamag.com/wp-content/uploads/2019/01/Hadze_Beckwith_Fisher_travel-Africa-magazine.jpg') !important;
+	background-color: brown !important;
+	background-repeat: no-repeat !important;
+	background-attachment: fixed !important;
+	background-size: cover !important;
+	background-position: center !important;
+}
+
 .home-menu {
     background: white;
 }
@@ -43,7 +52,7 @@ body, html {
   background-color: #f9f9f9;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
-	right: 0px;
+	right: 10px;
 }
 
 .dropdown-content {
@@ -66,10 +75,102 @@ body, html {
 
 .list-lang {
 	list-style-type:none;
+	padding-right: 1em;
 }
 
-@media (min-width: 48em) {
+.splash-container {
+    z-index: 1;
+    overflow: hidden;
+    width: 100%;
+    height: 88%;
+    top: 0;
+    left: 0;
+    position: fixed !important;
+	color: white;
+	
+}
+
+.splash {
+    width: 50%;
+    height: 50%;
+	margin: auto;
+    position: absolute;
+    top: 100px;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    text-align: center;
+}
+
+.splash-head {
+    font-size: 300%;
+    font-weight: bold;
+    color: white;
+    border: 3px solid white;
+    padding: 1em 1.6em;
+    font-weight: 100;
+    border-radius: 5px;
+    line-height: 1em;
+    text-transform: uppercase;
+}
+
+.splash-subhead {
+    color: white;
+    letter-spacing: 0.02em;
+    opacity: 0.9;
+}
+
+.content-wrapper {
+    position: absolute;
+    top: 87%;
+    width: 100%;
+    min-height: 12%;
+    z-index: 2;
+}
+
+.logo-wrapper {
+	top: 30%;
+	width:100%;
+	background-color: white;
+}
+
+.logo {
+	display: block;
+	margin-top: 2em;
+	margin-left: auto;
+	margin-right: auto;
+	width: 15%;
+}
+
+.logo-title {
+	text-align: center;
+}
+
+.logo-line {
+	border-top: 1px solid black;
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	width: 30%;
+}
+
+
+/*css for smartphones*/
+@media (max-width: 1200px) {
 	body {
-        font-size: 20px;
-  }
+        font-size: 4em;
+	}
+  
+	.splash {
+		width: 80%;
+		height: 50%;
+	}
+	
+	.splash-head {
+    font-size: 1.5em;
+	}
+	
+	.splash-subhead {
+		font-size: 0.7em;
+	}
 }
