--- a/HoPe/templates/test.html
+++ b/HoPe/templates/test.html
@@ -1,33 +1,51 @@
 <!DOCTYPE html>
 <html>
   <head>
+	<link rel="stylesheet" type="text/css" href="pure.css">
     <link rel="stylesheet" type="text/css" href="custom.css">
-    <link rel="stylesheet" type="text/css" href="pure.css">
   </head>
   <body>
-    <div class="header">
-      <div class="home-menu pure-menu pure-menu-horizontal pure-menu-fixed">
-        <ul class="pure-menu-list">
-          <li class="pure-menu-item pure-menu-selected"><a href="#" class="pure-menu-link">Home</a></li>
-          <li class="pure-menu-item"><a href="#" class="pure-menu-link">About us</a></li>
-        </ul>
-        <div class="dropdown-lang">
-          <span>
-            English
-          </span>
-          <div class="dropdown-content-lang">
-            <ul class="list-lang">
-              <li>
-                German
-              </li>
-              <li>
-                English
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </div>
+    <ul class="nav home-menu pure-menu pure-menu-horizontal pure-menu-fixed">
+			<li class="home-menu-wrapper">
+				<a class="btn apure-button home-menu-button">
+					&#9776;
+				</a>
+				<ul class="home-menu-list">
+					<li class="home-menu-item">
+						<a class="home-menu-content" href="/">
+							Home
+						</a>
+					</li>
+					<li class="home-menu-item">
+						<a class="home-menu-content" href="">
+							Contact us
+						</a>
+					</li>
+					<li class="home-menu-item">
+						<a class="home-menu-content" href="google.com">
+							google
+						</a>
+					</li>
+					<li class="dropdown-lang home-menu-item">
+						<div class="home-menu-content">
+						  <span>
+							English
+						  </span>
+						  <div class="dropdown-content-lang">
+							<ul class="list-lang">
+							  <li>
+								German
+							  </li>
+							  <li>
+								English
+							  </li>
+							</ul>
+						  </div>
+						</div>	
+					</li>
+				</ul>
+			</li>
+		</ul>
   <div id="content">
     <div class="bg-picture splash-container">
 		<div class="splash">
