--- a/HoPe/static/css/custom.css
+++ b/HoPe/static/css/custom.css
@@ -5,7 +5,8 @@ body, html {
 }
 
 .bg {
-	background-image: linear-gradient(to bottom right, white 50%, green);
+	/*background-image: linear-gradient(to bottom right, white 50%, green);*/
+	background-color: green;
 }
 
 .bg-picture {
@@ -17,17 +18,49 @@ body, html {
 	background-position: center !important;
 }
 
-.home-menu {
-    background: white;
-}
-
 .splash-container {
 	background: white;
 }
 
-.home-menu .pure-menu-heading {
+.home-menu {
+	background: white;
     font-weight: 400;
     font-size: 120%;
+	list-style: none;
+	padding: 0;
+	margin: 0;
+}
+
+.home-menu-list {
+	list-style: none;
+	padding: 15px 0 0px 0px;
+}
+
+.home-menu-button{
+	display:none;
+	margin:4px;
+	border-radius:4px;
+	border:1px solid #D0D0D0;	
+	width:2em;
+}
+.home-menu-item {
+	display: list-item;
+	float: left;
+}
+
+.home-menu-content:hover {
+	background-color: #fff;
+}
+
+.home-menu-content {
+		text-decoration: none;
+		padding: 0px 0 15px 20px;
+		color: black;
+}
+
+.home-menu-link {
+	display: list-item;
+	float: left;
 }
 
 .lang {
@@ -41,8 +74,8 @@ body, html {
 }
 
 .dropdown-lang {
-  position: relative;
-  display: inline-block;
+	position: relative;
+	display: inline-block;
 	float: right;
 }
 
@@ -154,7 +187,17 @@ body, html {
 	width: 30%;
 }
 
+.header-button {
+	display:none;
+}
 
+.pure-menu-list{
+	width: 100%;
+}
+
+.home-menu-button:active ~ .home-menu-child {
+		display:block;
+}
 /*css for smartphones*/
 @media (max-width: 1200px) {
 	body {
@@ -172,5 +215,26 @@ body, html {
 	
 	.splash-subhead {
 		font-size: 0.7em;
+	}
+
+	.home-menu-button {
+		display:block;
+	}
+	
+	.pure-menu-horizontal .pure-menu-item {
+	display: block;
+	}
+
+	
+	.home-menu-item {
+		float: none;
+	}
+	
+	.home-menu-list {
+			display: none;
+	}
+	
+	.home-menu:hover .home-menu-list {
+		display: block;
 	}
 }
