--- a/HoPe/templates/test.html
+++ b/HoPe/templates/test.html
@@ -7,37 +7,54 @@
   <body>
     <ul class="nav home-menu pure-menu pure-menu-horizontal pure-menu-fixed">
 			<li class="home-menu-wrapper">
-				<a class="btn apure-button home-menu-button">
-					&#9776;
-				</a>
+				<div class="btn apure-button home-menu-button">
+					<a>
+						&#9776;
+					</a>
+				</div>
 				<ul class="home-menu-list">
 					<li class="home-menu-item">
-						<a class="home-menu-content" href="/">
+					<a href="/">
+						<div class="home-menu-content">
 							Home
+						</div>
+					</a>
+					</li>
+					<li class="home-menu-item">
+						<a href="">
+							<div class="home-menu-content">
+								Contact us
+							</div>
 						</a>
 					</li>
 					<li class="home-menu-item">
-						<a class="home-menu-content" href="">
-							Contact us
-						</a>
+						<hr class="home-menu-line">
 					</li>
 					<li class="home-menu-item">
-						<a class="home-menu-content" href="google.com">
-							google
+						
+						<a href="google.com">
+							<div class="home-menu-content">
+								HouseOfPerspectives
+							</div>
 						</a>
+						
+					</li>
+					<li>
+						<hr class="home-menu-dropdown-line">
 					</li>
 					<li class="dropdown-lang home-menu-item">
+					
 						<div class="home-menu-content">
 						  <span>
-							English
+							<img src="Media/united-kingdom.svg" class="home-menu-country-icon">English
 						  </span>
 						  <div class="dropdown-content-lang">
 							<ul class="list-lang">
 							  <li>
-								German
+								<img src="Media/germany.svg" class="home-menu-country-icon">German
 							  </li>
 							  <li>
-								English
+								<img src="Media/united-kingdom.svg" class="home-menu-country-icon">English
 							  </li>
 							</ul>
 						  </div>
