--- a/HoPe/templates/test.html
+++ b/HoPe/templates/test.html
@@ -6,63 +6,71 @@
   </head>
   <body>
     <ul class="nav home-menu pure-menu pure-menu-horizontal pure-menu-fixed">
-			<li class="home-menu-wrapper">
-				<div class="btn apure-button home-menu-button">
-					<a>
-						&#9776;
-					</a>
-				</div>
-				<ul class="home-menu-list">
-					<li class="home-menu-item">
-					<a href="/">
+		<li class="home-menu-wrapper">
+			<div class="btn apure-button home-menu-button">
+				<a>
+					&#9776;
+				</a>
+			</div>
+			<ul class="home-menu-list">
+				<li class="home-menu-item">
+				<a href="main.html">
+					<div class="home-menu-content">
+						Home
+					</div>
+				</a>
+				</li>
+				<li class="home-menu-item">
+					<a href="support_us.html">
 						<div class="home-menu-content">
-							Home
+							Support us
 						</div>
 					</a>
-					</li>
-					<li class="home-menu-item">
-						<a href="">
-							<div class="home-menu-content">
-								Contact us
-							</div>
-						</a>
-					</li>
-					<li class="home-menu-item">
-						<hr class="home-menu-line">
-					</li>
-					<li class="home-menu-item">
-						
-						<a href="google.com">
-							<div class="home-menu-content">
-								HouseOfPerspectives
-							</div>
-						</a>
-						
-					</li>
-					<li>
-						<hr class="home-menu-dropdown-line">
-					</li>
-					<li class="dropdown-lang home-menu-item">
-					
+				</li>
+				</li>
+				<li class="home-menu-item">
+					<a href="">
 						<div class="home-menu-content">
-						  <span>
+							Impressum
+						</div>
+					</a>
+				</li>
+				<li class="home-menu-item">
+					<hr class="home-menu-line">
+				</li>
+				<li class="home-menu-item">
+					
+					<a href="google.com">
+						<div class="home-menu-content">
+							HouseOfPerspectives
+						</div>
+					</a>
+					
+				</li>
+				<li>
+					<hr class="home-menu-dropdown-line">
+				</li>
+				<li class="dropdown-lang home-menu-item">
+				
+					<div class="home-menu-content">
+					  <span>
+						<img src="Media/united-kingdom.svg" class="home-menu-country-icon">English
+					  </span>
+					  <div class="dropdown-content-lang">
+						<ul class="list-lang">
+						  <li>
+							<img src="Media/germany.svg" class="home-menu-country-icon">German
+						  </li>
+						  <li>
 							<img src="Media/united-kingdom.svg" class="home-menu-country-icon">English
-						  </span>
-						  <div class="dropdown-content-lang">
-							<ul class="list-lang">
-							  <li>
-								<img src="Media/germany.svg" class="home-menu-country-icon">German
-							  </li>
-							  <li>
-								<img src="Media/united-kingdom.svg" class="home-menu-country-icon">English
-							  </li>
-							</ul>
-						  </div>
-						</div>	
-					</li>
-				</ul>
-			</li>
-		</ul>
+						  </li>
+						</ul>
+					  </div>
+					</div>	
+				</li>
+			</ul>
+		</li>
+	</ul>
   <div id="content">
     <div class="bg-picture splash-container">
 		<div class="splash">
@@ -76,18 +84,40 @@
 			<hr class="logo-line">
 			<h1 class="logo-title">HoPe-Germany</h1>
 		</div>
-		<ul>
-			<li>test1</li>
-			<li>test2</li>
-			<li>test3</li>
-			<li>test1</li>
-			<li>test2</li>
-			<li>test3</li>
-			<li>test1</li>
-			<li>test2</li>
-			<li>test3</li>
-		</ul>
+		<div class ="about">
+			<h1 class="about-title">About</h1>
+			<p class="about-text">
+				bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla 
+				bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla 
+				bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla 
+				bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla 
+				bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla 
+				bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla 
+				bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla
+			</p>
+			<p class="about-text">
+				bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla 
+				bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla 
+				bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla 
+				bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla 
+				bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla 
+				bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla 
+				bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla
+				bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla 
+				bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla 
+				bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla 
+				bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla 
+				bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla 
+				bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla 
+				bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla
+			</p>
+		</div>
+		<div class="pure-g foot">
+			<div class="pure-u-1-3 foot-content"><p>Phone</p></div>
+			<div class="pure-u-1-3 foot-content"><p>Email</p></div>
+			<div class="pure-u-1-3 foot-content"><p>Location</p></div>
+		</div>
 	</div>
   </div>
  </body>
-<html>
+</html>
