update html css country-icons

--- a/HoPe/Foerder/templates/Foerder/index.html
+++ b/HoPe/Foerder/templates/Foerder/index.html
@@ -1,11 +1,50 @@
 {% extends "base.html" %}
 {% block content %}
-  <div class="splash-container">
-    <div class="splash">
-        <h1 class="splash-head">HoPeGerman</h1>
-        <p class="splash-subhead">House of Perspectives</p>
-        <a>test</a>
-    </div>
-  </div>
+<div class="bg-picture splash-container">
+<div class="splash">
+  <h1 class="splash-head">WAYZOLOO</h1>
+  <p class="splash-subhead">Translated from Ewe to English means you are warmly welcome as a visitor to our website!</p>
+</div>
+</div>
+<div class="content-wrapper bg">
+<div class="logo-wrapper">
+  <img src="https://houseofperspective.files.wordpress.com/2019/10/cropped-logo-png.png?w=740&h=655" class="logo">
+  <hr class="logo-line">
+  <h1 class="logo-title">HoPe-Germany</h1>
+</div>
+<div class ="about">
+  <h1 class="about-title">About</h1>
+  <p class="about-text">
+    bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla
+    bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla
+    bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla
+    bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla
+    bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla
+    bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla
+    bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla
+  </p>
+  <p class="about-text">
+    bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla
+    bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla
+    bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla
+    bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla
+    bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla
+    bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla
+    bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla
+    bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla
+    bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla
+    bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla
+    bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla
+    bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla
+    bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla
+    bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla
+  </p>
+</div>
+<div class="pure-g foot">
+  <div class="pure-u-1-3 foot-content"><p>Phone</p></div>
+  <div class="pure-u-1-3 foot-content"><p>Email</p></div>
+  <div class="pure-u-1-3 foot-content"><p>Location</p></div>
+</div>
+</div>
 
 {% endblock %}
