--- a/HoPe/templates/base.html
+++ b/HoPe/templates/base.html
@@ -2,33 +2,76 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="{% static 'custom.css' %}">
     <link rel="stylesheet" href="{% static 'pure.css' %}">
+    <link rel="stylesheet" href="{% static 'custom.css' %}">
   </head>
-  <body class="bg">
-    <div class="header">
-      <div class="home-menu pure-menu pure-menu-horizontal pure-menu-fixed">
-        <ul class="pure-menu-list">
-          <li class="pure-menu-item pure-menu-selected"><a href="#" class="pure-menu-link">Home</a></li>
-          <li class="pure-menu-item"><a href="#" class="pure-menu-link">About us</a></li>
-        </ul>
-        <div class="dropdown-lang">
-          <span>
-            English
-          </span>
-          <div class="dropdown-content-lang">
-            <ul class="list-lang">
-              <li>
-                German
-              </li>
-              <li>
-                English
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </div>
+  <body>
+    <ul class="nav home-menu pure-menu pure-menu-horizontal pure-menu-fixed">
+		<li class="home-menu-wrapper">
+			<div class="btn apure-button home-menu-button">
+				<a>
+					&#9776;
+				</a>
+			</div>
+			<ul class="home-menu-list">
+				<li class="home-menu-item">
+				<a href="main.html">
+					<div class="home-menu-content">
+						Home
+					</div>
+				</a>
+				</li>
+				<li class="home-menu-item">
+					<a href="support_us.html">
+						<div class="home-menu-content">
+							Support us
+						</div>
+					</a>
+				</li>
+				</li>
+				<li class="home-menu-item">
+					<a href="">
+						<div class="home-menu-content">
+							Impressum
+						</div>
+					</a>
+				</li>
+				<li class="home-menu-item">
+					<hr class="home-menu-line">
+				</li>
+				<li class="home-menu-item">
+
+					<a href="google.com">
+						<div class="home-menu-content">
+							HouseOfPerspectives
+						</div>
+					</a>
+
+				</li>
+				<li>
+					<hr class="home-menu-dropdown-line">
+				</li>
+				<li class="dropdown-lang home-menu-item">
+
+					<div class="home-menu-content">
+					  <span>
+						<img src="{% static 'icons/gb.png' %}" class="home-menu-country-icon">English
+					  </span>
+					  <div class="dropdown-content-lang">
+						<ul class="list-lang">
+						  <li>
+							<img src="{% static 'icons/de.png' %}" class="home-menu-country-icon">German
+						  </li>
+						  <li>
+							<img src="{% static 'icons/gb.png' %}" class="home-menu-country-icon">English
+						  </li>
+						</ul>
+					  </div>
+					</div>
+				</li>
+			</ul>
+		</li>
+	</ul>
   <div id="content">
     {% block content %}{% endblock %}
   </div>
