--- a/HoPe/templates/base.html
+++ b/HoPe/templates/base.html
@@ -18,7 +18,7 @@
 				<li class="home-menu-item">
 				<a href="main.html">
 					<div class="home-menu-content">
-						{% trans "Home" as menu_home %}
+						{% trans "Home" %}
 					</div>
 				</a>
 				</li>
