--- a/HoPe/templates/base.html
+++ b/HoPe/templates/base.html
@@ -25,7 +25,7 @@
 				<li class="home-menu-item">
 					<a href="support_us.html">
 						<div class="home-menu-content">
-							{% trans "Support us" as menu_support_us %}
+							{% trans "Support us" %}
 						</div>
 					</a>
 				</li>
