--- a/HoPe/templates/base.html
+++ b/HoPe/templates/base.html
@@ -66,7 +66,7 @@
               <img src="{% static 'icons/gb.png' %}" class="home-menu-country-icon">
 
              {% endif %}
-            English
+            {% trans "English" %}
 					  </span>
 					  <div class="dropdown-content-lang">
 						<ul class="list-lang">
