--- a/HoPe/templates/base.html
+++ b/HoPe/templates/base.html
@@ -16,14 +16,14 @@
 			</div>
 			<ul class="home-menu-list">
 				<li class="home-menu-item">
-				<a href="main.html">
+				<a href="home">
 					<div class="home-menu-content">
 						{% trans "Home" %}
 					</div>
 				</a>
 				</li>
 				<li class="home-menu-item">
-					<a href="support_us.html">
+					<a href="support_us">
 						<div class="home-menu-content">
 							{% trans "Support us" %}
 						</div>
@@ -31,7 +31,7 @@
 				</li>
 				</li>
 				<li class="home-menu-item">
-					<a href="">
+					<a href="impressum">
 						<div class="home-menu-content">
 							Impressum
 						</div>
