--- a/HoPe/templates/base.html
+++ b/HoPe/templates/base.html
@@ -91,6 +91,15 @@
 	</ul>
   <div id="content">
     {% block content %}{% endblock %}
+    <div class="foot-blocker">
+      <br>
+    </div>
+    <div class="pure-g foot">
+      <div class="pure-u-1-3 foot-content"><p>Phone</p></div>
+      <div class="pure-u-1-3 foot-content"><p>Email</p></div>
+      <div class="pure-u-1-3 foot-content"><p>Location</p></div>
+    </div>
+    </div>
   </div>
  </body>
 <html>
