--- a/HoPe/Foerder/templates/Foerder/impressum.html
+++ b/HoPe/Foerder/templates/Foerder/impressum.html
@@ -1,10 +1,85 @@
 {% extends "base.html" %}
 {% block content %}
-
-<div class="pure-g foot">
-  <div class="pure-u-1-3 foot-content"><p>Phone</p></div>
-  <div class="pure-u-1-3 foot-content"><p>Email</p></div>
-  <div class="pure-u-1-3 foot-content"><p>Location</p></div>
+<div>
+  <div class="content content-first">
+      <h1 class="content-title">Impressum</h1>
+      <table class="table">
+        <tr>
+          <td><div  class="tmg">Entries referred to § 5 TMG Germany</div></td>
+        </tr>
+        <tr>
+          <td><h4>Freunde & Förderer HoPe Ghana e.V.</h4></td>
+        </tr>
+        <tr>
+          <td>Loitscher Weg 2a</td>
+        </tr>
+        <tr>
+          <td>39128 Magdeburg</td>
+        </tr>
+        <tr>
+          <td>Germany</td>
+        </tr>
+      </table>
+      <table class="table">
+        <tr>
+          <td><h4>Represented by</h4></td>
+        </tr>
+        <tr>
+          <td>J. Oelsner</td>
+        </tr>
+        <tr>
+          <td>Loitscher Weg 2a</td>
+        </tr>
+        <tr>
+          <td>39128 Magdeburg</td>
+        </tr>
+        <tr>
+          <td>Germany</td>
+        </tr>
+      </table>
+      <table class="table">
+        <tr>
+          <td><h4>Technical contact</h4></td>
+        </tr>
+        <tr>
+          <td>Richard Lüdtke</td>
+        </tr>
+        <tr>
+          <td>Lüneburger Straße 26a</td>
+        </tr>
+        <tr>
+          <td>39106 Magdeburg</td>
+        </tr>
+        <tr>
+          <td>Germany</td>
+        </tr>
+        <tr>
+          <td>richard.luedtke@gmx.de</td>
+        </tr>
+      </table>
+  </div>
+  <div class="content">
+      <h1 class="content-title">technical administration</h1>
+      <table class="table">
+        <tr>
+          <td>Account holder:</td>
+          <td>J. Oelsner</td>
+        </tr>
+        <tr>
+          <td>IBAN:</td>
+          <td>DE53 1203 0000 1057 1194 38</td>
+        </tr>
+        <tr>
+          <td>Bank name:</td>
+          <td>DKB</td>
+        </tr>
+        <tr>
+          <td>Usage:</td>
+          <td>Spende F.V. HoPe Ghana, Name of the donater</td>
+        </tr>
+      </table>
+  </div>
+<!--
 </div>
-
+-->
 {% endblock %}
