--- a/HoPe/Foerder/templates/Foerder/index.html
+++ b/HoPe/Foerder/templates/Foerder/index.html
@@ -12,9 +12,9 @@
   <hr class="logo-line">
   <h1 class="logo-title">HoPe-Germany</h1>
 </div>
-<div class ="about">
-  <h1 class="about-title">About</h1>
-  <p class="about-text">
+<div class ="content">
+  <h1 class="content-title">About</h1>
+  <p class="content-text">
     bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla
     bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla
     bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla
@@ -23,7 +23,7 @@
     bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla
     bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla
   </p>
-  <p class="about-text">
+  <p class="content-text">
     bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla
     bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla
     bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla
@@ -40,11 +40,6 @@
     bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla
   </p>
 </div>
-<div class="pure-g foot">
-  <div class="pure-u-1-3 foot-content"><p>Phone</p></div>
-  <div class="pure-u-1-3 foot-content"><p>Email</p></div>
-  <div class="pure-u-1-3 foot-content"><p>Location</p></div>
-</div>
-</div>
+
 
 {% endblock %}
