--- a/HoPe/Foerder/templates/Foerder/support_us.html
+++ b/HoPe/Foerder/templates/Foerder/support_us.html
@@ -1,10 +1,38 @@
 {% extends "base.html" %}
 {% block content %}
+<div>
+  <div class="content content-first">
+    <h1 class="content-title">Become a supporter</h1>
+    <p class="content-text">
+      coming soon...
+    </p>
+  </div>
+  <div class="content">
+    <h1 class="content-title">Support us with a donation</h1>
+    <table class="table">
+      <tr>
+        <td>Account holder:</td>
+        <td>J. Oelsner</td>
+      </tr>
+      <tr>
+        <td>IBAN:</td>
+        <td>DE53 1203 0000 1057 1194 38</td>
+      </tr>
+      <tr>
+        <td>Bank name:</td>
+        <td>DKB</td>
+      </tr>
+      <tr>
+        <td>Usage:</td>
+        <td>Donation F.V. HoPe Ghana, Name of the donater</td>
+      </tr>
+    </table>
+  </div>
 
-<div class="pure-g foot">
-  <div class="pure-u-1-3 foot-content"><p>Phone</p></div>
-  <div class="pure-u-1-3 foot-content"><p>Email</p></div>
-  <div class="pure-u-1-3 foot-content"><p>Location</p></div>
+
+<!--
 </div>
+-->
+
 
 {% endblock %}
