--- a/HoPe/static/css/custom.css
+++ b/HoPe/static/css/custom.css
@@ -6,23 +6,8 @@ body, html {
 
 }
 
-.about {
-	width:60%;
-	background-color: #66CC33;
-	margin-left: auto;
-	margin-right: auto;
-	padding: 1em 0em 3em 0em;
-}
-
-.about-title {
-	margin-left: 1em;
-	font-size:300%;
-}
-
-.about-text {
-	margin-left: 1em;
-	margin-right: 1em;
-	font-size: 150%;
+h4 {
+	margin: 0
 }
 
 .bg {
@@ -40,14 +25,48 @@ body, html {
 	background-position: center !important;
 }
 
+.content {
+	width:60%;
+	background-color: #66CC33;
+	margin-top: 20px;
+	margin-left: auto;
+	margin-right: auto;
+	padding: 1em 0em 3em 0em;
+}
+
+.content-first {
+	margin-top:100px;
+}
+
+.content-title {
+	margin: 0 0 0 25px;
+	font-size:300%;
+}
+
+.content-text {
+	margin: 25px 0 0 25px;
+	font-size: 150%;
+}
+
+.content-wrapper {
+    position: absolute;
+    top: 87%;
+    width: 100%;
+    min-height: 12%;
+    z-index: 2;
+}
+
 .foot {
-	margin-top: 2em;
-	position:absolute;
+	position:fixed;
 	bottom:0;
 	width:100%;
 	background-color: white;
 	height: 3em;
 	border-top: 2px solid black;
+}
+
+.foot-blocker {
+	margin-top: 3em;
 }
 
 .foot-content {
@@ -58,7 +77,7 @@ body, html {
 	border-top: 1px solid black;
 	display: block;
 	margin-top: 10px;
-	width: 100%;	
+	width: 100%;
 }
 
 .splash-container {
@@ -118,7 +137,7 @@ body, html {
 	border-top: 1px solid black;
 	display: block;
 	margin-top: 10px;
-	width: 30px;	
+	width: 30px;
 	transform: rotate(90deg);
 }
 
@@ -126,7 +145,7 @@ body, html {
 	border-top: 1px solid black;
 	display: none;
 	margin-top: 10px;
-	width: 30px;	
+	width: 30px;
 	transform: rotate(90deg);
 	float: left;
 }
@@ -175,7 +194,7 @@ body, html {
     left: 0;
     position: fixed !important;
 	color: white;
-	
+
 }
 
 .splash {
@@ -208,12 +227,16 @@ body, html {
     opacity: 0.9;
 }
 
-.content-wrapper {
-    position: absolute;
-    top: 87%;
-    width: 100%;
-    min-height: 12%;
-    z-index: 2;
+.table {
+	margin: 25px 25px 0 25px;
+}
+
+.table tr td {
+	font-size: 150%;
+}
+
+.tmg {
+	margin-bottom: 20px;
 }
 
 .logo-wrapper {
@@ -261,16 +284,16 @@ body, html {
 	body {
         font-size: 4em;
 	}
-  
+
 	.about{
 		margin: 0;
 		width: 100%
 	}
-  
+
 	.about-text {
 		font-size: 100%;
 	}
-	
+
 	.about-title {
 		font-size:100%;
 	}
@@ -283,38 +306,38 @@ body, html {
 
 	.dropdown-lang {
 			width:100%;
-	}	
+	}
 
 	.home-menu-button {
 		display:block;
 	}
-	
+
 	.home-menu-content {
 		margin: 5px 10px 5px 10px;
 		font-size: 80%;
 		font-weight: bold;
 	}
-	
+
 	.home-menu-item {
 		float: none;
 	}
-	
+
 	.home-menu-list {
 			display: none;
 	}
-	
+
 	.home-menu:hover .home-menu-list {
 		display: block;
 	}
-	
+
 	.home-menu-line {
 		transform: rotate(0deg);
 		width:50%;
 		margin: 10px auto 10px auto;
 	}
-	
-	
-	
+
+
+
 	.home-menu-dropdown-line {
 		transform: rotate(0deg);
 		width:50%;
@@ -322,42 +345,42 @@ body, html {
 		float: none;
 		display:block;
 	}
-	
+
 	.list-lang {
 		padding:0px;
 	}
 	.logo-line {
 		width: 80%;
 	}
-	
+
 	.logo-title{
 		font-size:150%;
 	}
-	
+
 	.logo {
-		width: auto;	
+		width: auto;
 	}
 	.logo-title{
 		margin: 0px;
 		padding-top: 0.67em;
 		padding-bottom: 0.67em;
-	}	
-	
+	}
+
 	.pure-menu-horizontal .pure-menu-item {
 	display: block;
 	}
-	
+
 	.splash {
 		width: 80%;
 		height: 50%;
 	}
-	
+
 	.splash-head {
     font-size: 1.5em;
 	}
-	
+
 	.splash-subhead {
 		font-size: 0.7em;
 	}
-	
+
 }
