--- a/HoPe/Foerder/templates/Foerder/impressum.html
+++ b/HoPe/Foerder/templates/Foerder/impressum.html
@@ -36,6 +36,9 @@
         <tr>
           <td>Germany</td>
         </tr>
+        <tr>
+          <td>jockeyla.jockeyla@gmail.com</td>
+        </tr>
       </table>
       <table class="table">
         <tr>
@@ -58,27 +61,7 @@
         </tr>
       </table>
   </div>
-  <div class="content">
-      <h1 class="content-title">technical administration</h1>
-      <table class="table">
-        <tr>
-          <td>Account holder:</td>
-          <td>J. Oelsner</td>
-        </tr>
-        <tr>
-          <td>IBAN:</td>
-          <td>DE53 1203 0000 1057 1194 38</td>
-        </tr>
-        <tr>
-          <td>Bank name:</td>
-          <td>DKB</td>
-        </tr>
-        <tr>
-          <td>Usage:</td>
-          <td>Spende F.V. HoPe Ghana, Name of the donater</td>
-        </tr>
-      </table>
-  </div>
+
 <!--
 </div>
 -->
