--- a/HoPe/static/css/custom.css
+++ b/HoPe/static/css/custom.css
@@ -17,7 +17,7 @@ h4 {
 }
 
 .bg-picture {
-	background-image: url('https://travelafricamag.com/wp-content/uploads/2019/01/Hadze_Beckwith_Fisher_travel-Africa-magazine.jpg') !important;
+	background-image: url('Hope_05.jpeg') !important;
 	background-color: brown !important;
 	background-repeat: no-repeat !important;
 	background-attachment: fixed !important;
