--- a/HoPe/templates/base.html
+++ b/HoPe/templates/base.html
@@ -3,8 +3,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="{% static 'pure.css' %}">
-    <link rel="stylesheet" href="{% static 'custom.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'pure.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'custom.css' %}">
   </head>
   <body>
     <ul class="nav home-menu pure-menu pure-menu-horizontal pure-menu-fixed">
