--- a/HoPe/Foerder/templates/Foerder/index.html
+++ b/HoPe/Foerder/templates/Foerder/index.html
@@ -10,9 +10,9 @@
 </div>
 <div class="content-wrapper bg">
 <div class="logo-wrapper">
-  <img src="https://houseofperspective.files.wordpress.com/2019/10/cropped-logo-png.png?w=740&h=655" class="logo">
+  <img src="{% static 'Hope.jpeg' %}" class="logo">
   <hr class="logo-line">
-  <h1 class="logo-title">HoPe-Germany</h1>
+  <h1 class="logo-title">Freunde & Förderer HoPe Ghana e.V.</h1>
 </div>
 <div class ="content">
   <h1 class="content-title"><!--What do we do?-->{% trans "content1-title" %}</h1>
