hide foot, email change, redirect to hope

--- a/HoPe/Foerder/templates/Foerder/impressum.html
+++ b/HoPe/Foerder/templates/Foerder/impressum.html
@@ -38,7 +38,7 @@
           <td><!--Germany-->{% trans "germany" %}</td>
         </tr>
         <tr>
-          <td>jockeyla.jockeyla@gmail.com</td>
+          <td>jolina.oelsner@gmail.com</td>
         </tr>
       </table>
       <table class="table">
