--- a/HoPe/templates/base.html
+++ b/HoPe/templates/base.html
@@ -42,7 +42,7 @@
 				</li>
 				<li class="home-menu-item">
 
-					<a href="google.com">
+					<a href="https://www.houseofperspectives.org">
 						<div class="home-menu-content">
 							HouseOfPerspectives
 						</div>
