-headline center -picture trans

--- a/HoPe/Foerder/templates/Foerder/index.html
+++ b/HoPe/Foerder/templates/Foerder/index.html
@@ -10,7 +10,7 @@
 </div>
 <div class="content-wrapper bg">
 <div class="logo-wrapper">
-  <img src="{% static 'Hope.jpeg' %}" class="logo">
+  <img src="{% static 'Hope_trans.jpeg' %}" class="logo">
   <hr class="logo-line">
   <h1 class="logo-title">Freunde & Förderer HoPe Ghana e.V.</h1>
 </div>
@@ -52,7 +52,7 @@
 <div class ="content disp-table">
   <div class="content-left">
     <img src="{% static 'Hope_04.jpeg' %}" class="content3-picture">
-    <p class="content-text bold">
+    <p class="content-text bold text-center">
       <!--Adults are present-->{% trans "content3-title1" %}
     </p>
     <p class="content-text">
@@ -62,7 +62,7 @@
     </p>
   </div>
   <div class="content-right">
-    <p class="content-text bold">
+    <p class="content-text bold text-center">
       <!--Children are the future-->{% trans "content3-title2" %}
     </p>
     <p class="content-text">
