--- a/HoPe/static/css/custom.css
+++ b/HoPe/static/css/custom.css
@@ -46,6 +46,7 @@ h4 {
 .content-title {
 	margin: 20px 0 0 25px;
 	font-size:300%;
+	text-align: center;
 }
 
 .content-text {
@@ -315,6 +316,10 @@ h4 {
 	margin-right: auto;
 	width: 90%;
 	border: 1px solid black;
+}
+
+.text-center{
+	text-align: center;
 }
 /*css for smartphones*/
 @media (max-width: 1200px) {
