--- a/HoPe/templates/base.html
+++ b/HoPe/templates/base.html
@@ -5,7 +5,8 @@
   <head>
     <link rel="stylesheet" type="text/css" href="{% static 'pure.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'custom.css' %}">
-  </head>
+    <link href="https://fonts.googleapis.com/css?family=Abel&display=swap" rel="stylesheet"> 
+ </head>
   <body>
     <ul class="nav home-menu pure-menu pure-menu-horizontal pure-menu-fixed">
 		<li class="home-menu-wrapper">
