--- a/HoPe/Foerder/templates/Foerder/index.html
+++ b/HoPe/Foerder/templates/Foerder/index.html
@@ -4,7 +4,7 @@
 {% block content %}
 <div class="bg-picture splash-container">
 <div class="splash">
-  <h1 class="splash-head"><!--WAYZOLOO-->{% trans "splash-title" %}</h1>
+  <h1 class="splash-head"><span>WOEZ</span><span class="rotate-c">C</span><!--{% trans "splash-title" %}--></h1>
   <p class="splash-subhead"><!--Translated from Ewe to English means you are warmly welcome as a visitor to our website!-->{% trans "splash-text" %}</p>
 </div>
 </div>
