--- a/HoPe/static/css/custom.css
+++ b/HoPe/static/css/custom.css
@@ -322,6 +322,11 @@ h4 {
 .text-center{
 	text-align: center;
 }
+
+.rotate-c{
+	position: absolute;
+	-webkit-transform: scale(-1, 1);
+}
 /*css for smartphones*/
 @media (max-width: 1200px) {
 	body {
