--- a/HoPe/Foerder/templates/Foerder/event_list.html
+++ b/HoPe/Foerder/templates/Foerder/event_list.html
@@ -1,12 +1,39 @@
 {% extends "base.html" %}
 {% load i18n %}
+{% load static %}
 {% block content %}
 
 <div class="content content-first">
-Deutscher Titel: {{ events.first.title_german }}
+	{% if events %}
+		Deutscher Titel: {{ events.first.title_german }}
+	{% endif %}
 
-{% if events %}
-	{% for event in events
+	<a class="event-link" href="events/1">
+		<div class="event-list-box" style="background-image: url('../../static/EventImages/Hope.jpeg');">
+			<!--<img src="{% static 'EventImages/Hope.jpeg' %}" class="event-list-logo">-->
+			<div class="event-list-headline">
+				Das ist eine Überschrift
+			</div>
+		</div>
+	</a>
+	<a>
+		<div class="event-list-box" style="background-image: url('../../static/EventImages/Download.jpg');">
+			<!--<img src="{% static 'EventImages/Hope.jpeg' %}" class="event-list-logo">-->
+			<div class="event-list-headline">
+				Das ist eine Überschrift
+			</div>
+		</div>
+	</a>
+	<a>
+		<div class="event-list-box" style="background-image: url('../../static/EventImages/Hope.jpeg');">
+			<!--<img src="{% static 'EventImages/Hope.jpeg' %}" class="event-list-logo">-->
+			<div class="event-list-headline">
+				Das ist eine Überschrift
+			</div>
+		</div>
+	</a>
+<!--{ if events %}
+	{ for event in events-->
 
 <!--
 </div>
