--- a/HoPe/static/css/custom.css
+++ b/HoPe/static/css/custom.css
@@ -247,7 +247,7 @@ h4 {
 .splash {
     width: 50%;
     height: 50%;
-	margin: auto;
+		margin: auto;
     position: absolute;
     top: 100px;
     left: 0;
@@ -338,7 +338,24 @@ h4 {
 	border-radius: 25px;
 	margin-top: 20px;
 }
+.event-list-box {
+	height: 400px;
+	overflow: hidden;
+  background-size: cover;
+  background-position: center;
+	margin-top: 10px;
+}
 
+.event-list-headline{
+	background-color: rgba(0, 0, 0, 0.6);
+	color: white;
+	font-weight: bold;
+	font-size: 200%;
+}
+
+.event-link{
+	text-decoration:none;
+}
 /*css for smartphones*/
 @media (max-width: 1200px) {
 	body {
